--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="navbar">
       <div class="navlogo">
         <div class="logo border">
-          <img src="./../Assets/logo.png" alt="">
+          <img src="Assets/logo.png" alt="">
         </div>
       </div>
       <div class="navadd border">
@@ -45,7 +45,7 @@
         </select>
       </div>
       <div class="sign border">
-        <a href="./../Login Page/login.html">
+        <a href="Login Page/login.html">
           <p class="hello">
             Hello, sign in
           </p>
