--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           & Orders
         </p>
       </div>
-      <div class="cart border" onclick="window.location.href='cart/index.html'">
+      <div class="cart border" onclick="window.location.href='Cart/index.html'">
         <i class="fa-solid fa-cart-shopping"></i>
         cart
       </div>
