--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 <body>
   <header>
     <div class="navbar">
-      <div class="navlogo">
+      <div class="navlogo" onclick="window.location.href='#'">
         <div class="logo border">
-          <img src="Assets/logo.png" alt="">
+          <img src="./../Assets/logo.png" alt="">
         </div>
       </div>
       <div class="navadd border">
@@ -45,7 +45,7 @@
         </select>
       </div>
       <div class="sign border">
-        <a href="Login Page/login.html">
+        <a href="./../Login Page/login.html">
           <p class="hello">
             Hello, sign in
           </p>
@@ -62,7 +62,7 @@
           & Orders
         </p>
       </div>
-      <div class="cart border" onclick="window.location.href='Cart/index.html'">
+      <div class="cart border" onclick="window.location.href='cart/index.html'">
         <i class="fa-solid fa-cart-shopping"></i>
         cart
       </div>
@@ -83,7 +83,7 @@
   <main>
     <section class="hero-section"></section>
     <section class="shop-section pd-2">
-      <div class="card-container">
+      <div class="card-container" onclick="window.location.href='product_page/index.html'">
         <div class="image-box">
           <img src="Assets/mouse.png" alt="Mouse"/>
         </div>
